--- a/Assignment 2/2. Candidate Test 2022 I.ipynb
+++ b/Assignment 2/2. Candidate Test 2022 I.ipynb
@@ -72,12 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "370a3ba0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as no\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sea\n",
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "c1be5da8",
    "metadata": {},
    "outputs": [],
@@ -110,7 +109,7 @@
     "\n",
     "#removing any NaN in the dataset\n",
     "data_without_nan = data.dropna()\n",
-    "data_without_nan.head()\n",
+    "data_without_nan = data_without_nan.rename(columns={\"parti\": \"party\", \"alder\": \"age\", \"navn\": \"name\", \"storkreds\": \"constituencies\"})\n",
     "\n",
     "# taking the parties and the age columns\n",
     "data_filtered = data_without_nan[[\"party\", \"age\"]]\n",
@@ -129,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "bda3ff1b",
    "metadata": {},
    "outputs": [
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "60038c47",
    "metadata": {},
    "outputs": [
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "fd57a71c",
    "metadata": {},
    "outputs": [
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "be61e666",
    "metadata": {},
    "outputs": [
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "e36dfef6",
    "metadata": {},
    "outputs": [
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "73ece15e",
    "metadata": {},
    "outputs": [
@@ -756,7 +755,7 @@
        "129      Socialistisk Folkeparti          Emil Samaras  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "ed433b7d",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1064,7 @@
        "123      Socialistisk Folkeparti                 4  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
