--- a/Assignment-3/3. Vestas - Predicting Wind Speed.ipynb
+++ b/Assignment-3/3. Vestas - Predicting Wind Speed.ipynb
@@ -120,23 +120,177 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 1. Imports"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import netCDF4 as nc\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sea\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "risoe_nc_path = \"Data/Risoe/risoe_m_all.nc\"\n",
+    "meso_risoe_path = \"Data/Risoe/meso_risoe.csv\"\n",
+    "borglum_nc_path = \"Data/Borglum/borglum_all.nc\"\n",
+    "meso_borglum_path = \"Data/Borglum/meso_borglum.csv\"\n",
+    "base_date = datetime(1995,1,1,1,1,1,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>ws77</th>\n",
+       "      <th>wd77</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1995-01-01 01:01:00</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>205.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1995-01-01 01:11:00</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>205.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1995-01-01 01:21:00</td>\n",
+       "      <td>3.59</td>\n",
+       "      <td>204.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1995-01-01 01:31:00</td>\n",
+       "      <td>3.87</td>\n",
+       "      <td>202.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1995-01-01 01:41:00</td>\n",
+       "      <td>4.74</td>\n",
+       "      <td>201.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628354</th>\n",
+       "      <td>2007-02-11 07:52:00</td>\n",
+       "      <td>6.04</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628355</th>\n",
+       "      <td>2007-02-11 08:02:00</td>\n",
+       "      <td>6.97</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628356</th>\n",
+       "      <td>2007-02-11 08:12:00</td>\n",
+       "      <td>8.17</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628357</th>\n",
+       "      <td>2007-02-11 08:22:00</td>\n",
+       "      <td>6.66</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628358</th>\n",
+       "      <td>2007-02-11 08:32:00</td>\n",
+       "      <td>6.72</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>628359 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      time  ws77   wd77\n",
+       "0      1995-01-01 01:01:00  3.36  205.0\n",
+       "1      1995-01-01 01:11:00  3.05  205.0\n",
+       "2      1995-01-01 01:21:00  3.59  204.0\n",
+       "3      1995-01-01 01:31:00  3.87  202.0\n",
+       "4      1995-01-01 01:41:00  4.74  201.0\n",
+       "...                    ...   ...    ...\n",
+       "628354 2007-02-11 07:52:00  6.04    0.0\n",
+       "628355 2007-02-11 08:02:00  6.97    0.0\n",
+       "628356 2007-02-11 08:12:00  8.17    0.0\n",
+       "628357 2007-02-11 08:22:00  6.66    0.0\n",
+       "628358 2007-02-11 08:32:00  6.72    0.0\n",
+       "\n",
+       "[628359 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_nc_ds = nc.Dataset(risoe_nc_path, \"r\")\n",
+    "b_nc_ds = nc.Dataset(borglum_nc_path, \"r\")\n",
+    "df_mast = pd.DataFrame({\n",
+    "    \"time\": r_nc_ds[\"time\"][:],\n",
+    "    \"ws77\": r_nc_ds[\"ws77\"][:],\n",
+    "    \"wd77\": r_nc_ds[\"wd77\"][:]\n",
+    "})\n",
+    "df_mast['time'] = pd.to_datetime(df_mast['time'], unit='m', origin=base_date)\n",
+    "df_mast"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
